--- a/Views/Cart/Index.cshtml
+++ b/Views/Cart/Index.cshtml
@@ -1,25 +1,25 @@
-﻿@model List<Item>
+﻿@model FPTBook.Models.Bill
 @{
     var sum = 0.00;
     Layout = "__ClientLayout";
 }
 @if (TempData["MessageNull"] != null)
 {
-        <div class="alert alert-danger">@TempData["MessageNull"]</div>
+    <div class="alert alert-danger">@TempData["MessageNull"]</div>
 }
 else
 {
     @if (TempData["MessageRemove"] != null)
     {
-            <div class="alert alert-danger">@TempData["MessageRemove"]</div>
+        <div class="alert alert-danger">@TempData["MessageRemove"]</div>
     }
     @if (TempData["MessageDecrease"] != null)
     {
-            <div class="alert alert-danger">@TempData["MessageDecrease"]</div>
+        <div class="alert alert-danger">@TempData["MessageDecrease"]</div>
     }
     @if (TempData["MessageIncrease"] != null)
     {
-            <div class="alert alert-danger">@TempData["MessageIncrease"]</div>
+        <div class="alert alert-danger">@TempData["MessageIncrease"]</div>
     }
     <table class="table table-bordered text-center mt-3">
         <tr>
@@ -30,35 +30,70 @@ else
             <th>Total</th>
             <th>Action</th>
         </tr>
-        @foreach (var item in Model)
+        @foreach (var item in ViewBag.Cart)
         {
-                <tr>
-                    <td>@item.Id</td>
-                    <td>
-                        <img src="~/image/@item.book.Image" width="100" height="100">
-                        <div>@item.book.Title</div>
-                    </td>
-                    <td>@item.book.Price</td>
-                    <td>
+            <tr>
+                <td>@item.Id</td>
+                <td>
+                    <img src="~/image/@item.book.Image" width="100" height="100">
+                    <div>@item.book.Title</div>
+                </td>
+                <td>@item.book.Price</td>
+                <td>
                     @if (TempData["MessageDecrease"] == null)
                     {
-                                <a asp-controller="Cart" asp-action="DecreaseQuantityToOne" asp-route-id="@item.Id">-</a>
+                        <a asp-controller="Cart" asp-action="DecreaseQuantityToOne" asp-route-id="@item.Id">-</a>
                     }
                     @item.Item_Quantity
                     @if (TempData["MessageIncrease"] == null)
                     {
-                                <a asp-controller="Cart" asp-action="IncreaseQuantityToOne" asp-route-id="@item.Id">+</a>
+                        <a asp-controller="Cart" asp-action="IncreaseQuantityToOne" asp-route-id="@item.Id">+</a>
                     }
-                    </td>
-                    <td>@item.Total</td>
-                    <td><a asp-controller="Cart" asp-action="Remove" asp-route-id="@item.Id" class="btn btn-danger btn-sm">Remove</a></td>
-                </tr>
+                </td>
+                <td>@item.Total</td>
+                <td><a asp-controller="Cart" asp-action="Remove" asp-route-id="@item.Id" class="btn btn-danger btn-sm">Remove</a></td>
+            </tr>
             sum += item.Total;
         }
         <tr>
             <td colspan="4">Total</td>
             <td>@(sum)</td>
-            <td><a class="btn btn-info btn-sm" asp-controller="Customer" asp-action="CheckOut">Checkout</a></td>
+            <td><button type="button" class="btn btn-primary btn-sm" data-toggle="modal" data-target="#checkout">Order</button>
+            </td>
         </tr>
     </table>
+
+
+    <form asp-controller="Customer" asp-action="CheckOut">
+        <div class="modal fade" id="checkout" tabindex="-1" role="dialog" aria-hidden="true">
+            <div class="modal-dialog modal-dialog-centered" role="document">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title" id="exampleModalLongTitle">Order Confirmation</h5>
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+                    <div class="modal-body">
+                        <div class="form-group">
+                            <input asp-for="@Model.CustomerEmail" value="@User.Identity.Name" disabled class="form-control">
+                        </div>
+                        <div class="form-group">
+                            <input asp-for="@Model.Price" value="@(sum)" class="form-control" disabled class="form-control">
+                        </div>
+                        <div class="form-group">
+                            <input type="text" name="Address" class="form-control">
+                        </div>
+                        <div class="form-group">
+                            <input type="text" name="Phone" class="form-control">
+                        </div>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                        <a asp-controller="Customer" asp-action="Checkout" class="btn btn-primary btn-sm">Confirm</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </form>
 }
