--- a/Views/Customer/ListAccount.cshtml
+++ b/Views/Customer/ListAccount.cshtml
@@ -1,17 +1,36 @@
 ﻿@using Microsoft.AspNetCore.Identity
+@{
+    Layout = "__Management";
+}
 @if(Model.Count != 0)
 {
-    @foreach (var i in Model)
-    {
-        @i.UserName
-        @i.PasswordHash
-        @i.Id
-            <form asp-controller="Customer" asp-action="ChangePassword" method="post">
-                <input name="id" value="@i.Id" type="hidden">
-                         Change pass: <input type="password" name="pass"/>
-                 <input type="submit" value="Change"/>
-            </form>
-    }
+    <div class="ml-2">
+      <h2>List Account</h2>
+      <p></p>            
+          <table class="table table-hover col-lg-11" style="color:white;">
+        <thead>
+          <tr>
+            <th>Email</th>
+            <th>New Password</th>
+          </tr>
+        </thead>
+            <tbody>
+                @foreach (var i in Model)
+            {
+          <tr>
+                
+                        <td>@i.UserName</td>
+                        
+                            <form asp-controller="Customer" asp-action="ChangePassword" method="post">
+                                <input name="id" value="@i.Id" type="hidden">
+                                <td>Change pass: <input type="password" name="pass"/>
+                                <input type="submit" value="Change"/></td>
+                            </form>
+          </tr>
+          }
+        </tbody>
+      </table>
+          </div>
 }
 else{
     <span>@TempData["message"]</span>
