--- a/Views/Shared/__ClientLayout.cshtml
+++ b/Views/Shared/__ClientLayout.cshtml
@@ -10,11 +10,9 @@
   <link rel="stylesheet" href="~/css/index/style.css"/>
   <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" />
-  <link rel="stylesheet" href="~/css/site.css" />
     
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css"
     integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
-    <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
 
     <style type="text/css">
         body {
@@ -160,7 +158,6 @@ else
         </div>
       </div>
       <div class="bread-crumb pl-5 col-lg-12">
-        <a href="#" class="pl-5 ">Home/abc</a>
       </div>
     </div>
   </header>
@@ -172,7 +169,7 @@ else
         <div class="col-lg-12 category bread-crumb">
             @foreach (var category in ViewBag.Categories)
             {
-                <a href="#" class="col-lg-12 mr-2">@category.Name</a>
+                <a asp-controller="Customer" asp-action="CategoryBook" asp-route-id="@category.Id" class="col-lg-12 mr-2">@category.Name</a>
             }
         </div>
       </div>
